@startuml

entity USERS {
    * id : int (PK)
    --
    name : string
    email : string (UNIQUE)
    password_hash : string
    created_at : datetime
    updated_at : datetime
}

entity RESUMES {
    * id : int (PK)
    --
    user_id : int (FK)
    original_resume : text
    optimized_resume : text
    uploaded_at : datetime
}

entity JOBS {
    * id : int (PK)
    --
    user_id : int (FK)
    job_title : string
    job_description : text
    company_name : string
    added_at : datetime
}

entity JOB_MATCHES {
    * id : int (PK)
    --
    user_id : int (FK)
    job_id : int (FK)
    resume_id : int (FK)
    match_score : float
    match_details : text
    calculated_at : datetime
}

entity APPLICATIONS {
    * id : int (PK)
    --
    user_id : int (FK)
    job_id : int (FK)
    application_status : string
    application_link : string
    applied_at : datetime
}

USERS ||--|{ RESUMES : owns
USERS ||--|{ JOBS : adds
USERS ||--|{ JOB_MATCHES : generates
USERS ||--|{ APPLICATIONS : submits
JOBS ||--|{ JOB_MATCHES : relates
RESUMES ||--|{ JOB_MATCHES : used_for
JOBS ||--|{ APPLICATIONS : tracks

@enduml
